<resources>
    <string name="app_name">Taller_4_PDM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">+ Agregar a favoritos</string>
    <string name="text_nothing">N/A</string>
    <string name="titulo">Titulo:</string>
    <string name="caratula">Caratula:</string>
    <string name="autores">Autor(es):</string>
    <string name="edicion">Edicion:</string>
    <string name="isbn">ISBN:</string>
    <string name="editoriales">Editoriales:</string>
    <string name="resumen">Resumen:</string>
    <string name="tag_s">Tag(s):</string>
    <string name="ingresa_los_datos">Ingresa los datos</string>
    <string name="agregar">AGREGAR</string>
    <string name="eliminar_de_favorito">- Eliminar de Favorito</string>
</resources>
