<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.taller_4_pdm.Activities.NewBookActivity"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_los_datos"
        android:textSize="@dimen/title_size"
        android:textColor="#000"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_autores"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/autores"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_edicion"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/edicion"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_editorial"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/editoriales"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_resumen"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/resumen"
        android:layout_margin="@dimen/margin_tv"/>

    <EditText
        android:id="@+id/et_isbn"
        android:layout_width= "@dimen/et_width"
        android:layout_height="wrap_content"
        android:hint="@string/isbn"
        android:layout_margin="@dimen/margin_tv"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"/>


</LinearLayout>
